--- a/views/products/show.ejs
+++ b/views/products/show.ejs
@@ -85,6 +85,8 @@
                 <div class="buy-cart">
                     <button class="buy-product" id="buy-product">Buy Now</button>
                     <button class="add-to-cart" id="add-to-cart">Add to Cart</button>
+                    <a href="/products/<%= product._id%>/edit" > <button class="edit-product">Edit Product</button>
+                        </a>
                 </div>
 
             </div>
