--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -13,8 +13,8 @@
             </ul>
         </li>
         <li><a href="#">Deals</a></li>
-        <li><a href="#">What's New</a></li>
-        <li><a href="#">Delivery</a></li>
+        <li><a href="/products/new">Add Product</a></li>
+        <li><a href="/">All Products</a></li>
     </ul>
 
     <ul>
