--- a/views/home.ejs
+++ b/views/home.ejs
@@ -34,6 +34,7 @@
 
         <div class="products">
             <% products.forEach(function(product) { %>
+                <a href="/products/<%= product._id %>">
                     <div class="product">
                         <div class="product-img">
                             <img src="<%=product.imageUrl %>" />
@@ -52,9 +53,7 @@
                                     $<%= product.price %>
                                 </div>
                             </div>
-                            <!-- <p>
-                        <%= product.category %>
-                    </p> -->
+
                             <div class="product-desc">
                                 <% var truncatedDesc=product.description.substring(0, 60);
                                     truncatedDesc=truncatedDesc+"..."; %>
@@ -63,13 +62,12 @@
 
                             <span class="buttons">
                                 <button class="add-to-cart">Add to cart</button>
-                                <a href="/products/<%= product._id %>" class="view-product">
-                                View product
-                            </a>
+
                             </span>
 
                         </div>
                     </div>
+                </a>
                 <% }); %>
 
         </div>
