--- a/Public/css/home.css
+++ b/Public/css/home.css
@@ -71,20 +71,26 @@ top div {
 }
 
 
+
 .products {
     width: 90%;
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     align-items: center;
-    gap: 20px;
+    gap: 100px;
     margin-bottom: 50px;
 }
 
-.product {
+.products a {
     width: 20%;
     height: 40%;
+}
+
+.product {
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -153,6 +159,12 @@ top div {
     cursor: pointer;
     align-self: flex-start;
     margin: 10px 0;
+    transition: all 0.3s ease-in-out;
+}
+
+.add-to-cart:hover {
+    background-color: #013D28;
+    color: #fff;
 }
 
 .buttons {
