--- a/Public/css/show.css
+++ b/Public/css/show.css
@@ -1,6 +1,6 @@
 .product {
     width: 90%;
-    height: 90%;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -36,6 +36,11 @@
     height: 70%;
     display: flex;
     flex-direction: column;
+    gap: 0.5rem;
+}
+
+.right-button {
+    margin-bottom: 1rem;
 }
 
 .right-title {
@@ -45,7 +50,6 @@
     justify-content: flex-start;
     align-items: center;
     color: #000000;
-
 }
 
 .right-description {
@@ -164,23 +168,18 @@
     gap: 3rem;
 }
 
-.add-to-cart {
+.buy-cart a {
     width: 100%;
-    height: 30%;
+    height: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
-    margin-top: 1.5rem;
-    background-color: white;
-    color: #013D28;
-    outline: none;
-    border: 1px solid #013D28;
-    border-radius: 40px;
+
 }
 
 .buy-product {
-    width: 100%;
-    height: 30%;
+    width: 20%;
+    min-height: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -190,8 +189,36 @@
     outline: none;
     border: none;
     border-radius: 40px;
+    cursor: pointer;
 }
 
-footer {
-    bottom: 0;
+.add-to-cart {
+    width: 20%;
+    min-height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1.5rem;
+    background-color: white;
+    color: #013D28;
+    outline: none;
+    border: 1px solid #013D28;
+    border-radius: 40px;
+    cursor: pointer;
+}
+
+
+.edit-product {
+    width: 20%;
+    min-height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    color: #013D28;
+    margin-top: 1.5rem;
+    outline: none;
+    border: 1px solid #013D28;
+    border-radius: 40px;
+    cursor: pointer;
 }
