--- a/Public/css/show.css
+++ b/Public/css/show.css
@@ -165,17 +165,17 @@
     justify-content: flex-start;
     align-items: center;
     margin-top: 1.5rem;
-    gap: 3rem;
+    gap: 2rem;
 }
 
-.buy-cart a {
+/* .buy-cart a {
     width: 100%;
     height: 100%;
     display: flex;
     justify-content: flex-start;
     align-items: center;
 
-}
+} */
 
 .buy-product {
     width: 20%;
@@ -207,18 +207,28 @@
     cursor: pointer;
 }
 
-
-.edit-product {
-    width: 20%;
+.edit {
+    /* width: 20%; */
     min-height: 40px;
+    margin-top: 1.5rem;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: white;
+    font-size: 1.5rem;
     color: #013D28;
+}
+
+.delete {
+    width: 20%;
+    min-height: 40px;
     margin-top: 1.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.5rem;
+    color: #013D28;
+    background-color: transparent;
+    border: none;
     outline: none;
-    border: 1px solid #013D28;
-    border-radius: 40px;
-    cursor: pointer;
+    cursor: pointer;    
 }
