--- a/views/products/new.ejs
+++ b/views/products/new.ejs
@@ -20,6 +20,9 @@
 
 <body>
     <%- include('../partials/nav') %>
+    <div class="back-button">
+        <a href="/"><i class="fa-solid fa-chevron-left"></i> &nbsp;Back</a>
+    </div>
         <h1 class="heading">Add a New Product</h1>
 
         <div class="form-container">
@@ -83,7 +86,7 @@
                     </div>
 
                 </div>
- 
+
 
                 <button type="submit" class="submit-button">Submit</button>
             </form>
