--- a/Public/css/show.css
+++ b/Public/css/show.css
@@ -1,6 +1,6 @@
 .product {
     width: 90%;
-    height: 100vh;
+    height: 110vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -45,7 +45,7 @@
 
 .right-title {
     width: 100%;
-    height: 10%;
+    height: fit-content;
     display: flex;
     justify-content: flex-start;
     align-items: center;
