--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,6 +1,6 @@
 <nav>
     <ul>
-        <img src="https://i.pinimg.com/originals/ab/ca/4c/abca4c51c7e166b2980105b5e98b7ac2.jpg" alt="" />
+        <img src="https://penji.co/wp-content/uploads/2019/08/ecommerce_logo_magento.jpg" alt="" />
     </ul>
     <ul class="menu">
         <li class="dropdown">
@@ -24,7 +24,8 @@
         </li>
     </ul>
     <ul>
-        <li class="user"><i class="fa-solid fa-user"></i>Account</li>
+        <li class="user"><i class="fa-solid fa-user"></i><a href="/login">Login</a></li>
+        <li class="user"><i class="fa-solid fa-user"></i><a href="/signUp">SignUp</a></li>
         <li class="cart"><i class="fa-solid fa-cart-shopping"></i>Cart</li>
     </ul>
 </nav>
