--- a/views/Auth/login.ejs
+++ b/views/Auth/login.ejs
@@ -20,39 +20,38 @@
 </head>
 
 <body>
-    <%- include('../partials/nav') %>
+    <!-- <%- include('../partials/nav') %> -->
 
-        <div class="form-container card">
-            <img src="https://static.vecteezy.com/system/resources/previews/004/299/835/original/online-shopping-on-phone-buy-sell-business-digital-web-banner-application-money-advertising-payment-ecommerce-illustration-search-free-vector.jpg"
-                class="card-img-top">
-            <div class="card-body">
+    <div class="form-container card">
+        <img src="https://static.vecteezy.com/system/resources/previews/004/299/835/original/online-shopping-on-phone-buy-sell-business-digital-web-banner-application-money-advertising-payment-ecommerce-illustration-search-free-vector.jpg"
+            class="card-img-top">
+        <div class="card-body">
 
-                <form novalidate class="validated-form" action="/">
-                    <div class=" mb-3">
-                        <label for="exampleInputEmail1" class="form-label">Email address</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                            required>
-                        <div class="invalid-feedback">
-                            Please enter a valid username.
-                        </div>
-                        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+            <form action="/login" method="post">
+                <div class=" mb-3">
+                    <label for="exampleInputEmail1" class="form-label">Email address</label>
+                    <input type="email" class="form-control" id="exampleInputEmail1" name="email" required>
+                    <div class="invalid-feedback">
+                        Please enter a valid email.
                     </div>
-                    <div class="mb-3">
-                        <label for="exampleInputPassword1" class="form-label">Password</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1" required>
-                        <div class="invalid-feedback">
-                            Please enter a valid password.
-                        </div>
+                    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                </div>
+                <div class="mb-3">
+                    <label for="exampleInputPassword1" class="form-label">Password</label>
+                    <input type="password" class="form-control" id="exampleInputPassword1" required name="password">
+                    <div class="invalid-feedback">
+                        Please enter a valid password.
                     </div>
-                    <button type="submit" class="submit-button">Submit</button>
-                </form>
-            </div>
+                </div>
+                <button type="submit" class="submit-button">Submit</button>
+            </form>
         </div>
-        <%- include('../partials/footer') %>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-                crossorigin="anonymous"></script>
-            <script src="/Js/formValidation.js"></script>
+    </div>
+    <!-- <%- include('../partials/footer') %> -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <script src="/Js/formValidation.js"></script>
 </body>
 
 </html>
