--- a/Public/css/base.css
+++ b/Public/css/base.css
@@ -19,6 +19,9 @@ ul {
 }
 
 nav {
+    position: relative;
+    top: 0;
+    left: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
