--- a/Public/css/login.css
+++ b/Public/css/login.css
@@ -1,11 +1,12 @@
 .form-container {
-    width: 40%;
+    width: 35%;
     margin: 50px auto;
+    margin-top: 120px;
 }
 
 .card-img-top {
     width: 100%;
-    height: 40vh;
+    height: 30vh;
     mix-blend-mode: multiply;
 }
 
