--- a/views/Auth/signUp.ejs
+++ b/views/Auth/signUp.ejs
@@ -19,14 +19,22 @@
 </head>
 
 <body>
-    <!-- <%- include('../partials/nav') %> -->
+    <%- include('../partials/nav') %>
 
     <div class="form-container card">
         <img src="https://www.zilliondesigns.com/blog/wp-content/uploads/Perfect-Ecommerce-Sales-Banner-1280x720.jpg"
             class="card-img-top">
         <div class="card-body">
 
-            <form novalidate class="validated-form" action="/signup" method="post">
+            <form novalidate class="validated-form" action="/signUp" method="post">
+                <div class=" mb-3">
+                    <label for="username" class="form-label">Username</label>
+                    <input type="text" class="form-control" id="username" name="username" required>
+                    <div class="invalid-feedback">
+                        Please enter a valid email.
+                    </div>
+                    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                </div>
                 <div class=" mb-3">
                     <label for="exampleInputEmail1" class="form-label">Email address</label>
                     <input type="email" class="form-control" id="exampleInputEmail1" name="email" required>
@@ -54,7 +62,7 @@
             </form>
         </div>
     </div>
-    <!-- <%- include('../partials/footer') %> -->
+    <%- include('../partials/footer') %>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
