--- a/Public/css/cart.css
+++ b/Public/css/cart.css
@@ -1,5 +1,4 @@
 .main {
-    border: 1px solid red;
     height: 100vh;
     width: 100%;
     padding-top: 80px;
@@ -67,6 +66,7 @@
     align-items: center;
     border-bottom: 1px solid rgb(158, 158, 158);
     padding: 15px 0px;
+    gap: 10px;
 }
 
 .cart-item-child {
@@ -77,12 +77,18 @@
     flex: 1;
 }
 
+.desc {
+    text-align: justify;
+    flex: 2;
+}
+
 
 .cart-item-child-1 {
+    flex: 2;
     display: flex;
     justify-content: flex-start;
     align-items: center;
-
+    /* border: 1px solid blue; */
 }
 
 .item-name {
@@ -102,8 +108,19 @@
 }
 
 .cart-item-child-1 img {
-    width: 100px;
-    height: 100px;
-    object-fit: cover;
+    width: 150px;
+    height: 120px;
+    object-fit: contain;
+    mix-blend-mode: multiply;
     border-radius: 5px;
+}
+
+.cart-heading span:nth-child(1),
+.cart-heading span:nth-child(2) {
+    flex-basis: 30%;
+}
+
+.cart-heading span {
+    flex-basis: 15%;
+    text-align: center;
 }
