--- a/views/home.ejs
+++ b/views/home.ejs
@@ -57,15 +57,15 @@
                             </div>
 
                             <div class="product-desc">
-                                <% var truncatedDesc=product.description.substring(0, 60);
+                                <% var truncatedDesc=product.description.substring(0, 100);
                                     truncatedDesc=truncatedDesc+"..."; %>
                                     <%= truncatedDesc %>
                             </div>
 
-                            <span class="buttons">
+                            <!-- <span class="buttons">
                                 <button class="add-to-cart">Add to cart</button>
 
-                            </span>
+                            </span> -->
 
                         </div>
                     </div>
