--- a/views/products/edit.ejs
+++ b/views/products/edit.ejs
@@ -49,6 +49,18 @@
                     </div>
 
                 </div>
+                <div class="mb-3">
+                    <label for="product-quantity" class="form-label">Product Quantity</label>
+                    <input type="text" class="form-control" id="product-quantity" required name="product[quantity]"
+                        value="<%= product.quantity %>">
+                    <div class="valid-feedback">
+                        Looks Good!
+                    </div>
+                    <div class="invalid-feedback">
+                        Please enter a Product quantity.
+                    </div>
+
+                </div>
 
                 <div class="mb-3">
                     <label for="product-desc" class="form-label">Product Description</label>
