--- a/views/cart/index.ejs
+++ b/views/cart/index.ejs
@@ -22,8 +22,8 @@
                             <% cart.forEach(element=> { %>
                                 <% total +=element.product.price * element.quantity; %>
                                     <% }); %>
-                                        <a href="#">Total Items: <%= cart.length %></a>
-                                        <a href="#">Total Price: $<%= total %></a>
+                                        <a>Total Items: <%= cart.length %></a>
+                                        <a href="/checkout/<%= user._id  %>">Checkout: $<%= total %></a>
                     </div>
             </div>
 
@@ -35,46 +35,52 @@
                     <span>Shipping</span>
                     <span>Price/unit</span>
                 </div>
-                <% cart.forEach(element=> {%>
+                <% if(cart.length>0) {%>
+                    <% cart.forEach(element=> {%>
 
-                    <div class="cart-item">
-                        <div class="cart-item-child-1 cart-item-child">
-                            <div>
-                                <img src=<%=element.product.imageUrl%>
-                                alt="">
-                            </div>
-                            <div>
-                                <div class="item-name">
-                                    <span>
-                                        <a href="/products/<%=element.product._id%>">
-                                            <%=element.product.name%>
-                                        </a>
-                                    </span>
-                                    <span class="unit-left">
-                                        <%= element.product.quantity %> units left
-                                    </span>
+                        <div class="cart-item">
+                            <div class="cart-item-child-1 cart-item-child">
+                                <div>
+                                    <img src=<%=element.product.imageUrl%>
+                                    alt="">
+                                </div>
+                                <div>
+                                    <div class="item-name">
+                                        <span>
+                                            <a href="/products/<%=element.product._id%>">
+                                                <%=element.product.name%>
+                                            </a>
+                                        </span>
+                                        <span class="unit-left">
+                                            <%= element.product.quantity %> units left
+                                        </span>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
 
-                        <div class="cart-item-child desc">
-                            <%=element.product.description%>
-                        </div>
+                            <div class="cart-item-child desc">
+                                <%=element.product.description%>
+                            </div>
 
-                        <div class="cart-item-child">
-                            <%=element.quantity%>
-                        </div>
+                            <div class="cart-item-child">
+                                <%=element.quantity%>
+                            </div>
 
-                        <div class="cart-item-child">
-                            Delivery
-                        </div>
+                            <div class="cart-item-child">
+                                Delivery
+                            </div>
 
-                        <div class="cart-item-child">
-                            $<%=element.product.price%>
+                            <div class="cart-item-child">
+                                $<%=element.product.price%>
+                            </div>
                         </div>
-                    </div>
-                    <% }); %>
+                        <% }); %>
+                            <% } else{%>
+                                <br>
+                                <p>No items in the cart</p>
 
+                                <%} %>
+                                    %>
             </div>
 
         </div>
