--- a/Public/css/home.css
+++ b/Public/css/home.css
@@ -1,22 +1,13 @@
-top {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0px auto;
-    margin-bottom: 50px;
-    color: #013D28;
-    padding-top: 90px;
-}
-
-top div {
+.top {
     width: 90%;
     height: 400px;
     background-color: #FBEFE4;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 20px;
+    padding: 1rem 2rem;
     border-radius: 10px;
+    margin: 6rem auto;
 }
 
 .top-left {
@@ -64,12 +55,14 @@ top div {
     height: 100%;
     margin: 0 auto;
     display: flex;
+    justify-content: center;
+    align-items: center;
+
 }
 
 .top-right img {
     width: 100%;
     height: 100%;
-    /* object-fit: cover; */
     mix-blend-mode: multiply;
 }
 
@@ -80,18 +73,22 @@ top div {
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
-    /* justify-content: space-between; */
-    align-items: center;
+    align-items: flex-start;
     gap: 100px;
     margin-bottom: 50px;
 }
 
 .products a {
+    text-decoration: none;
+    min-width: 250px;
     width: 20%;
     height: 40%;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
 }
 
 .product {
+
     width: 100%;
     height: 100%;
     display: flex;
@@ -99,6 +96,7 @@ top div {
     justify-content: center;
     align-items: center;
     cursor: pointer;
+
 }
 
 .product-img {
@@ -107,7 +105,7 @@ top div {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #F5F6F6;
+    background-color: #F7F7F7;
     border-radius: 10px;
 }
 
@@ -129,11 +127,14 @@ top div {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    padding: 1rem 0.5rem;
 }
 
 .product-name-price {
     width: 100%;
     display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
     justify-content: space-between;
     align-items: center;
     font-weight: 700;
@@ -144,7 +145,20 @@ top div {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    max-width: 200px;
+    width: 100%;
+    font-size: 1rem;
+    font-weight: 300;
+}
+
+.product-price-container {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.product-price {
+    width: 100%;
 }
 
 .product-desc {
@@ -155,9 +169,9 @@ top div {
 }
 
 .add-to-cart {
-    width: 30%;
-    height: 30px;
+    width: 80%;
     background-color: white;
+    padding: 0.5rem;
     color: #013D28;
     font-size: 0.8rem;
     font-weight: 300;
@@ -165,21 +179,12 @@ top div {
     outline: none;
     border: 1px solid #013D28;
     cursor: pointer;
-    align-self: flex-start;
-    margin: 10px 0;
     transition: all 0.3s ease-in-out;
 }
 
 .add-to-cart:hover {
     background-color: #013D28;
     color: #fff;
-}
-
-.buttons {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
 }
 
 .view-product {
@@ -198,4 +203,84 @@ top div {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+
+@media screen and (max-width: 350px) {
+    .top-right {
+        width: 100%;
+    }
+}
+
+
+@media screen and (max-width: 550px) {
+    .top {
+        flex-direction: column-reverse;
+        height: 70%;
+    }
+
+    .top-left {
+        width: 100%;
+        height: 100%;
+        margin: 0 auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 30px;
+    }
+
+    .top-left h1 {
+        text-align: center;
+    }
+
+    .top-left h2 {
+        text-align: center;
+    }
+
+    .top-right {
+        width: 100%;
+        height: 100%;
+        margin: 0 auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .products a {
+        width: 100%;
+        height: 100%;
+    }
+
+    .product-details {
+        padding: 2rem 0.5rem;
+    }
+
+    .product-name-price {
+        gap: 1rem;
+    }
+}
+
+@media only screen and (min-width: 550px) and (max-width: 750px) {
+
+    .top-right {
+        width: 40%;
+    }
+
+    .top-left h1 {
+        font-size: 1.5rem;
+    }
+
+    .top-left h2 {
+        font-size: 1rem;
+    }
+
+}
+
+
+@media screen and (max-width: 750px) {
+    .top-right img {
+        width: 80%;
+        height: 80%;
+    }
 }
