--- a/Public/css/login.css
+++ b/Public/css/login.css
@@ -1,29 +1,135 @@
+.main {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.main-login-img {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.main-login-img img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    
+}
+
+
 .form-container {
     width: 35%;
-    margin: 50px auto;
-    margin-top: 120px;
+    height: 60%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 2rem;
 }
 
-.card-img-top {
-    width: 100%;
-    height: 30vh;
-    mix-blend-mode: multiply;
+.form-container h1 {
+    font-size: 3rem;
+    color: #FF7E56;
 }
+
+.card-body {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    padding-left: 0;
+}
+
+
+.card-body form {
+    width: 100%;
+}
+
 
 .submit-button {
-    margin-top: 20px;
-    margin-bottom: 20px;
-    background-color: white;
-    color: #013D28;
-    border: 2px solid #013D28;
-    padding: 10px 20px;
-    border-radius: 25px;
+    width: 100%;
+    margin: 0.25rem auto;
+    background-color: #FF7E56;
+    color: white;
+    padding: 1rem 2rem;
+    border: none;
+    border-radius: 0.25rem;
     cursor: pointer;
     transition: all 0.3s ease-in-out;
 }
 
 
 .submit-button:hover {
-    background-color: #013D28;
+    background-color: white;
+    border: 1px solid #FF7E56;
+    color: #FF7E56;
+}
+
+.back-button {
+    width: 100%;
+    background-color: #FF7E56;
     color: white;
+    padding: 1rem 2rem;
+    border: none;
+    border-radius: 0.25rem;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    text-align: center;
+}
+
+
+.back-button:hover {
+    background-color: white;
+    border: 1px solid #FF7E56;
+    color: #FF7E56;
+}
+
+.back-button:hover a {
+    color: #FF7E56;
+}
+
+
+
+.signup a {
+    color: #FF7E56;
+    text-decoration: none;
+    font-weight: 600;
+}
+
+@media screen and (max-width: 1000px) {
+    .main {
+        flex-direction: column;
+        gap: 2rem;
+    }
+
+    .main-login-img {
+        width: 100%;
+        height: 50%;
+    }
+
+    .form-container {
+        width: 100%;
+        height: 50%;
+        padding: 0 2rem;
+    }
+
+    .form-container h1 {
+        font-size: 2rem;
+    }
+
+
+}
+
+@media screen and (max-width: 450px) {
+    .main {
+        gap: 8rem;
+    }
+
 }
