--- a/views/Auth/login.ejs
+++ b/views/Auth/login.ejs
@@ -20,11 +20,18 @@
 </head>
 
 <body>
-    <%- include('../partials/nav') %>
 
-        <div class="form-container card">
-            <img src="https://static.vecteezy.com/system/resources/previews/004/299/835/original/online-shopping-on-phone-buy-sell-business-digital-web-banner-application-money-advertising-payment-ecommerce-illustration-search-free-vector.jpg"
-                class="card-img-top">
+    <div class="main">
+        <div class="main-login-img">
+            <img src="images/login.jpeg" alt="login" />
+        </div>
+        <div class="form-container">
+            <h1>
+                Welcome to ShopSphere
+            </h1>
+            <p>
+                Ship Smarter Today
+            </p>
             <div class="card-body">
 
                 <form action="/login" method="post">
@@ -34,7 +41,8 @@
                         <div class="invalid-feedback">
                             Please enter a valid email.
                         </div>
-                        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                        <div id="emailHelp" class="form-text">We'll never share your email/username with anyone else.
+                        </div>
                     </div>
                     <div class="mb-3">
                         <label for="exampleInputPassword1" class="form-label">Password</label>
@@ -43,15 +51,22 @@
                             Please enter a valid password.
                         </div>
                     </div>
-                    <button type="submit" class="submit-button">Submit</button>
+                    <button type="submit" class="submit-button">Login</button>
                 </form>
+                <a href="/" class="back-button">Back</a>
+                <div class="signup">
+                    <p>Don't have an account? <a href="/signup">Sign up</a></p>
+
+                </div>
             </div>
         </div>
-        <%- include('../partials/footer') %>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-                crossorigin="anonymous"></script>
-            <script src="/Js/formValidation.js"></script>
+    </div>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <script src="/Js/formValidation.js"></script>
 </body>
 
 </html>
