--- a/views/Auth/signUp.ejs
+++ b/views/Auth/signUp.ejs
@@ -16,53 +16,67 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="/css/base.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="/css/signUp.css" />
 </head>
 
 <body>
-    <%- include('../partials/nav') %>
+    <div class="main">
+        <div class="main-img">
+            <img src="images/signup.png" alt="login" />
+        </div>
 
-    <div class="form-container card">
-        <img src="https://www.zilliondesigns.com/blog/wp-content/uploads/Perfect-Ecommerce-Sales-Banner-1280x720.jpg"
-            class="card-img-top">
-        <div class="card-body">
+        <div class="form-container">
+            <h1>
+                Welcome to ShopSphere
+            </h1>
+            <p>
+                Ship Smarter Today
+            </p>
+            <div class="card-body">
 
-            <form novalidate class="validated-form" action="/signUp" method="post">
-                <div class=" mb-3">
-                    <label for="username" class="form-label">Username</label>
-                    <input type="text" class="form-control" id="username" name="username" required>
-                    <div class="invalid-feedback">
-                        Please enter a valid email.
+                <form novalidate class="validated-form" action="/signUp" method="post">
+                    <div class=" mb-3">
+                        <label for="username" class="form-label">Username</label>
+                        <input type="text" class="form-control" id="username" name="username" required>
+                        <div class="invalid-feedback">
+                            Please enter a valid email.
+                        </div>
+                        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
                     </div>
-                    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-                </div>
-                <div class=" mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Email address</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" name="email" required>
-                    <div class="invalid-feedback">
-                        Please enter a valid email.
+                    <div class=" mb-3">
+                        <label for="exampleInputEmail1" class="form-label">Email address</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" name="email" required>
+                        <div class="invalid-feedback">
+                            Please enter a valid email.
+                        </div>
+                        <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
                     </div>
-                    <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-                </div>
-                <div class="mb-3">
-                    <label for="exampleInputPassword1" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" required name="password">
-                    <div class="invalid-feedback">
-                        Please enter a valid password.
+                    <div class="mb-3">
+                        <label for="exampleInputPassword1" class="form-label">Password</label>
+                        <input type="password" class="form-control" id="exampleInputPassword1" required name="password">
+                        <div class="invalid-feedback">
+                            Please enter a valid password.
+                        </div>
                     </div>
-                </div>
-                <div class="mb-3">
-                    <label for="exampleInputPassword2" class="form-label">Confirm Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword2" required
-                        name="confirmPassword">
-                    <div class="invalid-feedback">
-                        Please enter a valid password.
+                    <div class="mb-3">
+                        <label for="exampleInputPassword2" class="form-label">Confirm Password</label>
+                        <input type="password" class="form-control" id="exampleInputPassword2" required
+                            name="confirmPassword">
+                        <div class="invalid-feedback">
+                            Please enter a valid password.
+                        </div>
                     </div>
+                    <button type="submit" class="submit-button">Sign Up</button>
+                </form>
+                <a href="/" class="back-button">Back</a>
+                <div class="signup">
+                    <p>Don't have an account? <a href="/login">Login</a></p>
+
                 </div>
-                <button type="submit" class="submit-button">Submit</button>
-            </form>
+            </div>
         </div>
     </div>
-    <%- include('../partials/footer') %>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
